# lab-management-system

./: .env.example  README.md  Skcet_labs.session.sql  composer.json  config.env  package-lock.json  package.json  run.sh  vite.config.js
app/Http/: Kernel.php
app/Models/: ACload.php  Consumable.php  Lab.php  Lab_Table.php  Lablist.php  Labmove_table.php  Logs.php  Manitenance.php  ManitenanceLogs.php  NetworkSwitch.php  OtherDevice.php  Printer.php  RollLogs.php  Scrap.php  Student.php  StudentRecord.php  Temp.php  TempLog.php  Upsload.php  User.php  Warranty.php
config/: app.php  database.php  toastr.php
database/: basic.sqlite  database.sqlite
database/migrations/: 2014_10_12_000000_create_users_table.php  2023_05_03_173954_create_labid.php  2023_05_03_174740_create_otherdevices.php  2023_05_04_164739_create_scrap.php  2023_05_04_164749_create_temp.php  2023_05_04_164756_create_lab.php  2023_05_04_164803_create_lablist.php  2023_08_07_194418_create_labmove__name.php  2023_08_08_124408_create_student_table.php  2023_08_11_120212_logs.php  2023_08_17_213359_merge_data_from_basic_db.php  2023_08_17_222245_students_record.php  2023_08_17_224106_students.php  2023_08_20_121303_reverse_2023_05_04_164803_create_lablist.php  2023_08_20_121628_new_lab_table.php  2023_08_22_132533_log_details.php  2023_08_24_193819_consumables.php  2023_08_27_170309_warranty.php  2023_08_30_153400_maintenance.php  2023_08_30_154852_maintenance_logs.php  (+5 more)
report-gen/: README.md  bills.db  bills.py  pyproject.toml  requirements.txt
report-gen/pages/: report.py
routes/: web.php
(+118 files in other folders)
