[tool.poetry]
name = "report-gen"
version = "0.1.0"
description = ""
authors = ["Siddhesh Agarwal <siddhesh.agarwal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"
reportlab = {extras = ["accel"], version = "^4.0.8"}
pydantic = "^2.2.1"
pypdf = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
